Improve error handling in Qt Mfc examples.

Task-number: QTBUG-40881
Change-Id: Iada4965609209a9926b8234acc09fc8fcf79e518
Reviewed-by: Andy Shaw <andy.shaw@digia.com>